USAGOV-999-homepage-updates: Mobile Correct
USAGOV-999-homepage-updates: Still cutoff but going to try something and want to save progress

--- a/web/themes/custom/usagov/sass/_homepage.scss
+++ b/web/themes/custom/usagov/sass/_homepage.scss
@@ -373,7 +373,7 @@
 }
 
 .carousel-mover {
-  width: calc(100% - 110px);
+  width: min(calc(100% - 106px),240px);
   padding-left: 11px;
   padding-right: 11px;
 }
@@ -389,14 +389,16 @@
 
 .slide {
   height: 285px;
-  width: 234px;
-  max-width: 234px;
+  width: min(calc(100% - 4px), 234px);
+  max-width: min(calc(100% - 4px), 234px);
   flex: 0 0 calc(100%);
   margin-top: 10px;
   border: 1px solid #53BBDF;
   border-radius: 4px;
   box-shadow: 0 3px 6px rgba(122,122,122,.15);
   padding: 0;
+  margin-right: 4px;
+  // margin-left: 1px;
 
   &:focus-within {
     border: 4px solid #c05600;
@@ -642,10 +644,10 @@
 /* Larger Mobiles */
 @media (min-width: 400px) {
   .slide {
-    width: 236px;
-    max-width: 236px;
-    margin-left: calc((100% - 236px)/2);
-    margin-right: calc((100% - 236px)/2);
+    // width: 236px;
+    // max-width: 236px;
+    // margin-left: calc((100% - 236px)/2);
+    // margin-right: calc((100% - 236px)/2);
   }
 }
 
